--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,3 @@
-<p>hey chuth home page here</p>
-<%= link_to 'about', about_path %>
+<h1>The Bakchod Blog</h1>
+
+<%= link_to 'Articles', articles_path %>  |  <%= link_to 'About', about_path %>
