--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,4 +6,4 @@
 <p>
     Description: <%= @article.description %>
 </p>
- <%= link_to 'Edit article', edit_article_path(@article) %> | <%= link_to 'Back to article listing', article_path %> 
+ <%= link_to 'Edit article', edit_article_path(@article) %> | <%= link_to 'Back to article listing', articles_path %> 
