--- a/app/assets/stylesheets/cutom.css.scss
+++ b/app/assets/stylesheets/cutom.css.scss
@@ -1,2 +1,61 @@
+$navbar-default-bg: #010101;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+    float: left;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
+}
+
+#logo:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.center{
+    text-align: center;
+}
+
+.jumbotron {
+    background-image: asset-url('background.jpg');
+    background-size: cover;
+    height: 450px;
+}
+
+.jumbotron h1 {
+    color: #fff;
+    text-align: center;
+    margin-bottom: 30 px;
+    letter-spacing: -1px;
+    font-weight: bold;
+}
+
+.btn-xlarge {
+    font-size: 1.7em;
+    background-color: black;
+    border-style: solid;
+    border-color: white;
+}
+footer {
+    maring-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+}
+footer a:hover {
+    color:#222;
+}
+
+footer small {
+    float: left;
+    list-style: none;
+}
+footer ul li {
+    float: left;
+    margin-left: 15px;
+}
