--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,7 @@
-<h1>The Bakchod Blog</h1>
+<div class="center jumbotron">
+  <h1>The Bakchod Blog!</h1>
+  <p>Welcome to the world of bakchodi. Bakchodi </br> begins right here bro!</p>
+  <%= link_to 'Sign up now!', '#' , class: "btn btn-warning btn-lg btn-xlarge" %>
+</div>
 
-<%= link_to 'Articles', articles_path %>  |  <%= link_to 'About', about_path %>
+
