styled flash messages

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,14 +1,7 @@
+<%= render 'shared/errors', obj: @article %>
+        
 
-
-<% if @article.errors.any? %>
-    <h2>The Following errors prevented the artcle from getting created.</h2>
-    <% @article.errors.full_messages.each do |msg| %>
-    <ul>
-        <li><%= msg %></li>
-    </ul>
-<% end %>
-<% end %>
-
+    
 <div class = 'row'>
     <div class = 'col-xs-12'>
         
