--- a/app/assets/stylesheets/cutom.css.scss
+++ b/app/assets/stylesheets/cutom.css.scss
@@ -61,3 +61,8 @@ footer ul li {
     float: right;
     margin-left: 25px;
 }
+
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
