--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,16 @@
-<h1>Showing selected article</h1>
 
-<p>
-    Title: <%= @article.title %>
-</p>
-<p>
-    Description: <%= @article.description %>
-</p>
- <%= link_to 'Edit article', edit_article_path(@article) %> | <%= link_to 'Back to article listing', articles_path %> 
+
+<h2 align = 'center'> <strong><%= @article.title %></strong> </h2>
+
+<div class = 'well col-xs-8 col-xs-offset-2 description'>
+
+    <%= simple_format(@article.description) %>
+    <div class = 'article-actions'>
+        <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-warning btn-xs" %>
+        <%= link_to 'Delete', article_path(@article), method: :delete, 
+            data: { confirm: "Are you sure?" },
+            class: "btn btn-danger btn-xs" %>
+        <%= link_to 'All articles', articles_path, class: "btn btn-info btn-xs" %> 
+    </div>
+    
+</div>
