BAsic styling complete

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,7 +25,7 @@
                 </div>
                 
                 <div class="col-sm-8">
-                    <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Title of the article", autofocus: true %>
+                    <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Description of the article", autofocus: true %>
                 </div>
             </div>
             
