--- a/app/assets/stylesheets/cutom.css.scss
+++ b/app/assets/stylesheets/cutom.css.scss
@@ -66,3 +66,18 @@ footer ul li {
     border-top: 1px solid #eaeaea;
     padding-top: 5px;
 }
+
+.description {
+    margin-top: 0;
+}
+
+.article-title {
+    font-weight: bold;
+    font-size: 1.7em;
+}
+
+.article-body {
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
