--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,31 @@
-<h1>Listing all articles</h1>
+<h1 align = 'center'>Articles</h1>
 
-<p>
-    <%= link_to "Create new article", new_article_path %>
+<p align = 'center'>
+    <%= link_to "Create new!", new_article_path, class: "btn btn-info btn-xl" %>
 </p>
 
 
-<table>
-    <tr>
-        <th>Title</th>
-        <th>description</th>
-    </tr>
-    
+
     <% @articles.each do |article| %>
-    <tr>
-        <td> <%= article.title %> </td>
-        <td> <%= article.description %> </td>
-        <td> <%= link_to 'Edit', edit_article_path(article) %> </td>
-        <td> <%= link_to 'Show', article_path(article) %> </td>
-        <td> <%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: "Are you sure??"} %> </td>
-    </tr>
+        <div class = 'row'>
+            <div class = 'col-xs-8 col-xs-offset-2'>
+                <div class = 'well well-lg'>
+                    <div class = "article-title">
+                        <%= link_to article.title, article_path(article) %>
+                    </div>
+                    <div class = "article-body">
+                        <%= truncate(article.description, length: 300) %>
+                    </div>
+                    <div class = 'article-actions'>
+                        <%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning btn-xs" %>
+                        <%= link_to 'Delete', article_path(article), method: :delete, 
+                            data: { confirm: "Are you sure?" },
+                            class: "btn btn-danger btn-xs" %>
+                    </div>
+                </div>        
+            </div>
+        </div>
     <% end %>
-</table>
+        
+        
+   
