--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
   <h1>The Bakchod Blog!</h1>
-  <p>Welcome to the world of bakchodi. Bakchodi </br> begins right here bro!</p>
+  <p style = 'color:white'>Welcome to the world of bakchodi. Bakchodi </br> begins right here bro!</p>
   <%= link_to 'Sign up now!', '#' , class: "btn btn-warning btn-lg btn-xlarge" %>
 </div>
 
