Added secure password to user

--- a/app/assets/stylesheets/cutom.css.scss
+++ b/app/assets/stylesheets/cutom.css.scss
@@ -62,6 +62,14 @@ footer ul li {
     margin-left: 25px;
 }
 
+.articles-meta-details {
+    border-top: 1px solid #eaeaea;
+    margin-top: 15px;
+    padding-top: 5px;
+    font-style: oblique;
+
+}
+
 .article-actions {
     border-top: 1px solid #eaeaea;
     padding-top: 5px;
