--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,8 +14,16 @@
                         <%= link_to article.title, article_path(article) %>
                     </div>
                     <div class = "article-body">
+                        
                         <%= truncate(article.description, length: 300) %>
+
                     </div>
+                        <div class = "articles-meta-details">
+                            <small>posted by: <%= article.user.username if article.user %>,
+                                <%= time_ago_in_words(article.created_at) %> ago,
+                                last updated: <%= time_ago_in_words(article.updated_at) %> ago
+                            </small>
+                        </div>
                     <div class = 'article-actions'>
                         <%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning btn-xs" %>
                         <%= link_to 'Delete', article_path(article), method: :delete, 
