--- a/app/assets/stylesheets/cutom.css.scss
+++ b/app/assets/stylesheets/cutom.css.scss
@@ -41,26 +41,6 @@ $navbar-default-bg: #010101;
     border-style: solid;
     border-color: white;
 }
-footer {
-    margin-top: 35px;
-    padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: #777;
-}
-footer a:hover {
-    color:#222;
-}
-
-footer small {
-    float: left;
-    list-style: none;
-}
-
-
-footer ul li {
-    float: right;
-    margin-left: 25px;
-}
 
 .articles-meta-details {
     border-top: 1px solid #eaeaea;
@@ -88,4 +68,31 @@ footer ul li {
     border-top: 1px solid #eaeaea;
     padding-top: 15px;
     padding-bottom: 15px;
+}
+
+.listing {
+    list-style: none;
+    padding-left: 0;
+}
+
+footer {
+    margin-top: 35px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: #777;
+}
+
+footer a:hover {
+    color:#222;
+}
+
+footer small {
+    float: left;
+    list-style: none;
+}
+
+
+footer ul li {
+    float: right;
+    margin-left: 25px;
 }
