--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,6 +3,20 @@
 <h2 align = 'center'> <strong><%= @article.title %></strong> </h2>
 
 <div class = 'well col-xs-8 col-xs-offset-2 description'>
+    <%if @article.user%>
+    <ul class = 'listing'>
+        <div class = 'row center'>
+            <div class = 'col-md-4 col-md-offset-4'>
+                <li><small><em>posted by:</em></small></li>
+                <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+                    <li class = 'article-title'>
+                        <%= link_to @article.user.username, user_path(@article.user) %>
+                    </li>
+                <li><small><%= pluralize(@article.user.articles.count, "articles") if @article.user.articles %> </small></li>
+            </div>
+        </div>
+    <%end%>
+    </ul>
 
     <%= simple_format(@article.description) %>
     <div class = 'article-actions'>
