Added restrictions log in page & other nav bar actions

--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -17,12 +17,16 @@
                                 last updated: <%= time_ago_in_words(article.updated_at) %> ago
                             </small>
                         </div>
+                    <% if logged_in? && current_user == article.user %>
+                    
                     <div class = 'article-actions'>
                         <%= link_to 'Edit', edit_article_path(article), class: "btn btn-warning btn-xs" %>
                         <%= link_to 'Delete', article_path(article), method: :delete, 
                             data: { confirm: "Are you sure?" },
                             class: "btn btn-danger btn-xs" %>
                     </div>
+                    <% end %>
+                    
                 </div>        
             </div>
         </div>
