--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -20,10 +20,12 @@
 
     <%= simple_format(@article.description) %>
     <div class = 'article-actions'>
-        <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-warning btn-xs" %>
-        <%= link_to 'Delete', article_path(@article), method: :delete, 
-            data: { confirm: "Are you sure?" },
-            class: "btn btn-danger btn-xs" %>
+        <% if logged_in? && current_user == @article.user %>
+            <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-warning btn-xs" %>
+            <%= link_to 'Delete', article_path(@article), method: :delete, 
+                data: { confirm: "Are you sure?" },
+                class: "btn btn-danger btn-xs" %>
+        <% end %>
         <%= link_to 'All articles', articles_path, class: "btn btn-info btn-xs" %> 
     </div>
     
