--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,6 +10,11 @@
                         <%= link_to user.username, user_path(user) %>
                     </li>
                     <li><small><%= pluralize(user.articles.count, "articles") if user.articles %> </small></li>
+                    <% if logged_in? && current_user.admin? %>
+                        <%= link_to 'Delete User', user_path(user), method: :delete, 
+                        data: { confirm: "Are you sure ADMIN, it will delete all their article as well?" },
+                        class: "btn btn-danger btn-xs" %>
+                    <% end %>
                 </div>
             </div>
         </ul>
