--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -16,49 +16,40 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
        
-        <li> <%= link_to 'Articles', articles_path%></li>
+        <li> <%= link_to ' Articles', articles_path %></li>
         <li> <%= link_to 'Bakchods', users_path %> </li>
         
         <% if logged_in? %>  
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions! <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <span class="glyphicon glyphicon-tasks"></span> Actions<span class="caret"></span></a>
             <ul class="dropdown-menu">
               
               <li> <%= link_to 'New Article', new_article_path %> </li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">One more separated link</a></li>
+              <li><a href="#">Coming soon!</a></li>
+              
             </ul>
           </li>
         <% end %>
       </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+     
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
         
-            <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+            
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 Dashboard <%= "(Admin)" if current_user.admin? %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to 'Edit profile', edit_user_path(current_user) %></li>
                 <li><%= link_to 'View profile', user_path(current_user) %></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
+                <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+                
               </ul>
             </li>
           <% else %>
             <li><%= link_to 'Log in', login_path %></li>
-            <li><%= link_to 'sign up', signup_path %></li>
+            <li><%= link_to 'Signup', signup_path %></li>
           <% end %> 
       </ul>
     </div><!-- /.navbar-collapse -->
