changed https to ssh

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,1 +1,10 @@
-<p>yeah.. lund nai hai kuch yahan</p>
+<div>
+<h1>Purpose</h1>
+<p>This is simple blogging application which anyone and everyone can read! </br> Write your heart out!</p>
+<h2>Developer's word</h2>
+
+  <p>Hi, I am Sanket and I have developed this blogging application. </br>
+  This is one of my first applications so any suggestions are welcome.</p>
+  <%= link_to 'Reach me!', 'www.fb.com/rishav10195', class: "btn btn-lg btn-xlarge" %>
+
+</div>
