--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class = 'container'>
     <footer class = 'footer'>
         <small>
-            Copyright &copy; <a> The Bakchod group of industries. </a>
+            Copyright &copy; <a> SanketSingh 2017. </a>
         </small>
         <nav>
             <ul>
