--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The B..Blog</title>
+  <title>The Open Blog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -14,6 +14,7 @@
   </div>
   
   <%= render 'layouts/footer' %>
+  <%= debug(params) if Rails.env.development? %>
 
 </body>
 </html>
