--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align = "center">All the bakchods.</h1>
+<h1 align = "center">The Obloggers.</h1>
 <div align ='center'>
     <%= will_paginate %>
     <% @users.each do |user| %>
