--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1 align = 'center'> <strong>Bakchod comrade <%= @user.username %>'s page.</strong> </h1>
+<h1 align = 'center'> <strong>Comrade <%= @user.username %>'s page.</strong> </h1>
 
 <div class="row">
     <div class="col-md-4 col-md-offset-4 center">
